Another Joey sized commit. Updated APIs to have a different structure. For example the evaluations api will no longer have different endpoints for each eval. Added parameters to various dtos.  In terms of non-swagger, cleaned up evaluation logic for persisting Q/A. Restructured application so that services always returned the domain objects, not the DTOs so the services could be reused by other services.
