# src/main/java/io/swagger/api/EvaluationsApi.java
@@ -16,28 +16,38 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-04-06T13:58:51.528-04:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-04-09T20:56:30.452-04:00")
 
 @Api(value = "evaluations", description = "the evaluations API")
 public interface EvaluationsApi {
 
-    @ApiOperation(value = "Post results of new psychiatric evaluations", notes = "Post results of new psychiatric evaluations", response = EvaluationDto.class, tags={ "evaluation", })
+    @ApiOperation(value = "Post results of new evaluation", notes = "Post results of new evaluation", response = EvaluationDto.class, tags={ "evaluation", })
     @ApiResponses(value = { 
         @ApiResponse(code = 201, message = "Evaluation", response = EvaluationDto.class) })
-    @RequestMapping(value = "/evaluations/psychiatric",
+    @RequestMapping(value = "/evaluations",
         produces = { "application/json" }, 
         method = RequestMethod.POST)
-    ResponseEntity<EvaluationDto> createPatientPsychEvaluation(@ApiParam(value = "Evaluation to submit" ,required=true ) @RequestBody EvaluationDto evaluation);
+    ResponseEntity<EvaluationDto> createPatientEvaluation(@ApiParam(value = "Evaluation to submit" ,required=true ) @RequestBody EvaluationDto evaluation);
 
 
-    @ApiOperation(value = "Get blank psychiatric evaluation", notes = "Get blank psychiatric evaluation", response = EvaluationDto.class, tags={ "evaluation", })
+    @ApiOperation(value = "Get blank evaluation", notes = "Get blank evaluation", response = EvaluationDto.class, tags={ "evaluation", })
     @ApiResponses(value = { 
         @ApiResponse(code = 200, message = "Evaluation", response = EvaluationDto.class),
         @ApiResponse(code = 200, message = "Unexpected error", response = EvaluationDto.class) })
-    @RequestMapping(value = "/evaluations/blank/psychiatric",
+    @RequestMapping(value = "/evaluations/blank",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    ResponseEntity<EvaluationDto> getBlankPsychEvaluation();
+    ResponseEntity<EvaluationDto> getBlankEvaluation( @NotNull @ApiParam(value = "type of evaluation", required = true) @RequestParam(value = "evaluationType", required = true) String evaluationType);
+
+
+    @ApiOperation(value = "Get evaluation by id", notes = "Get evaluation by id", response = EvaluationDto.class, tags={ "evaluation", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Evaluation", response = EvaluationDto.class),
+        @ApiResponse(code = 200, message = "Unexpected error", response = EvaluationDto.class) })
+    @RequestMapping(value = "/evaluations/{evaluationId}",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    ResponseEntity<EvaluationDto> getEvaluationById(@ApiParam(value = "Id of evaluation to fetch",required=true ) @PathVariable("evaluationId") Long evaluationId);
 
 
     @ApiOperation(value = "Get all evaluations for patient", notes = "Get all evaluations for patient", response = EvaluationDto.class, responseContainer = "List", tags={ "evaluation", })
@@ -47,26 +57,7 @@ public interface EvaluationsApi {
     @RequestMapping(value = "/evaluations",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    ResponseEntity<List<EvaluationDto>> getEvaluationsByPatientId( @NotNull @ApiParam(value = "Id of patient to fetch", required = true) @RequestParam(value = "patientId", required = true) Long patientId);
-
-
-    @ApiOperation(value = "Get psychiatric evaluation by id", notes = "Get psychiatric evaluation by id", response = EvaluationDto.class, tags={ "evaluation", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Evaluation", response = EvaluationDto.class),
-        @ApiResponse(code = 200, message = "Unexpected error", response = EvaluationDto.class) })
-    @RequestMapping(value = "/evaluations/psychiatric/{evaluationId}",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<EvaluationDto> getPsychEvaluationById(@ApiParam(value = "Id of evaluation to fetch",required=true ) @PathVariable("evaluationId") Long evaluationId);
-
-
-    @ApiOperation(value = "Get psychiatric evaluations for patient", notes = "Get psychiatric evaluations for patient", response = EvaluationDto.class, responseContainer = "List", tags={ "evaluation", })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Array of evaluations", response = EvaluationDto.class),
-        @ApiResponse(code = 200, message = "Unexpected error", response = EvaluationDto.class) })
-    @RequestMapping(value = "/evaluations/psychiatric",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<List<EvaluationDto>> getPsychEvaluationsByPatientId( @NotNull @ApiParam(value = "Id of patient to fetch", required = true) @RequestParam(value = "patientId", required = true) Long patientId);
+    ResponseEntity<List<EvaluationDto>> getEvaluationsByPatientId( @NotNull @ApiParam(value = "Id of patient evaluations to fetch", required = true) @RequestParam(value = "patientId", required = true) Long patientId,
+         @NotNull @ApiParam(value = "type of evaluation to pull", required = true) @RequestParam(value = "evaluationType", required = true) String evaluationType);
 
 }
